# diagram

./: .gitignore  README.md  diagram.cabal  flake.nix  result
src/: Main.hs  ProgramEvaluation.hs  ProgramInstantiation.hs
src/Diagram/: Evaluate.hs  Graph.hs
src/DistributedIO/: Core.hs  EvalGraph.hs  Simulation.hs
test/: DistributedIOSpec.hs  Spec.hs  TrainHotelRetry.json  evalGraphSpec.hs  simulationSpec.hs
