cabal-version:      3.0
name:               diagram
version:            0.1.0.0
synopsis:           model environment for distributed programs
license:            Apache-2.0
license-file:       LICENSE
author:             Sam Hart
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable diagram
    main-is:          Main.hs
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.2.1,
                      async,
                      graphviz,
                      fgl,
                      text
    default-language: Haskell2010