cabal-version:      3.0
name:               diagram
version:            0.1.0.0
synopsis:           model environment for distributed programs
license:            Apache-2.0
license-file:       LICENSE
author:             Sam Hart

extra-source-files:
  LICENSE
  README.md

executable diagram
  build-depends:
    , base
    , async
    , graphviz
    , fgl
    , text

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds -threaded

  main-is:            Main.hs
  other-modules:      Diagram.Graph
                      Diagram.Evaluate

  hs-source-dirs:     src
  default-language:   Haskell2010
